--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,14 @@
 .env.development.local
 .env.test.local
 .env.production.local
+*.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Project description
+*.desc
+
+# VS Code Configuration
+jsconfig.json
