--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "delicious-recipes-react",
   "version": "0.1.0",
+  "homepage": "https://marti-web2.github.io/delicious-recipes-react",
   "private": true,
   "dependencies": {
     "@splidejs/react-splide": "^0.7.7",
@@ -21,8 +22,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "NODE_ENV='production' webpack",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "gulp": "gulp",
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
