--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "regex": "^0.1.1",
